fixed tooltip out of bounds

--- a/plot/styles.css
+++ b/plot/styles.css
@@ -23,8 +23,6 @@ html {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  /* border-top: #d3d3d3 1px solid; */
-  /* background-color: blue; */
 }
 
 .input {
@@ -59,7 +57,7 @@ svg {
 
 #source {
   margin: 7px 0 0 0;
-  font-size: 8pt;
+  font-size: 10pt;
   text-align: right;
 }
 .svgtxt,
@@ -113,26 +111,7 @@ svg {
   height: 215px;
 }
 
-/* .tooltip:before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 9px;
-  bottom: -13px;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-  border-top-color: #d3d3d3;
+a {
+  color: black;
+  text-decoration: none; /* no underline */
 }
-
-.tooltip:after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 10px;
-  bottom: -10px;
-  width: 0;
-  height: 0;
-  border: 5px solid transparent;
-  border-top-color: white;
-} */
